test/test_suite/errors/allocating_opt.c3
interface TestProto
{
}
struct Test
{
	void* abc;
}
fn void main()
{
	TestProto z = mem::alloc(Test?); // #error:  "$Type::kind != OPTIONAL" violated: 'Expected a non-optional type'.
}